Bug 1831863 - Drive by clean-ups to HTMLSharedElement. r=smaug

While I'm around let's remove redundant virtual keywords.

Depends on D177624

Differential Revision: https://phabricator.services.mozilla.com/D177625